* fix hibernate-jpa entity checking. * update column types for mariadb. * reorganize database init scripts. * update to mariadb 10.11 and use MariaDBDialect.